<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:orientation="vertical"
    android:layout_gravity="bottom"
    android:background="@color/white">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/app_logo_signup"
            android:layout_width="166dp"
            android:layout_height="78dp"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout"
            app:srcCompat="@drawable/logov1_rounded" />

        <TextView
            android:id="@+id/signup_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/signup_button"
            android:textColor="@color/black"
            android:textSize="35sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="256dp"
            android:layout_height="680dp"
            android:layout_marginTop="10dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/signup_title">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/editFirstnameText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:ems="10"
                    android:fontFamily="@font/poppins_regular"
                    android:hint="@string/firstname_text"
                    android:inputType="textPersonName"
                    android:textColor="@color/grey"
                    android:textSize="16sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <EditText
                    android:id="@+id/editLastnameText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:ems="10"
                    android:fontFamily="@font/poppins_regular"
                    android:hint="@string/lastname_text"
                    android:inputType="textPersonName"
                    android:textColor="@color/grey"
                    android:textSize="16sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <EditText
                    android:id="@+id/editCneMassarText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:ems="10"
                    android:fontFamily="@font/poppins_regular"
                    android:hint="@string/cne_massar_text"
                    android:inputType="text"
                    android:textColor="@color/grey"
                    android:textSize="16sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <EditText
                    android:id="@+id/editNumApogeeText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:ems="10"
                    android:fontFamily="@font/poppins_regular"
                    android:hint="@string/num_apogee_text"
                    android:inputType="number"
                    android:maxLength="8"
                    android:textColor="@color/grey"
                    android:textSize="16sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/schoolCardUpload"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginTop="15dp"
                android:backgroundTint="@color/light_grey"
                android:clickable="true"
                android:drawableEnd="@drawable/import_file"
                android:fontFamily="@font/poppins_regular"
                android:onClick="importSchoolCardOnClick"
                android:text="@string/import_school_card_text"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <Spinner
                android:id="@+id/selectSchool"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginTop="15dp"
                android:gravity="center"
                android:prompt="@string/school_text"
                android:spinnerMode="dialog" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <EditText
                    android:id="@+id/editEmailAddressSignupText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:ems="10"
                    android:fontFamily="@font/poppins_regular"
                    android:hint="@string/email_address_text"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/grey"
                    android:textSize="16sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:passwordToggleEnabled="true">

                <EditText
                    android:id="@+id/editPasswordSignupText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:ems="10"
                    android:fontFamily="@font/poppins_regular"
                    android:hint="@string/password_text"
                    android:inputType="textPassword"
                    android:textColor="@color/grey"
                    android:textSize="16sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:passwordToggleEnabled="true">

                <EditText
                    android:id="@+id/editConfirmPasswordSignupText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:ems="10"
                    android:fontFamily="@font/poppins_regular"
                    android:hint="@string/confirm_password_text"
                    android:inputType="textPassword"
                    android:textColor="@color/grey"
                    android:textSize="16sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/signup_button_page"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/rounded_corners_white"
                android:backgroundTint="@color/picton_blue"
                android:fontFamily="@font/poppins_medium"
                android:onClick="onSignupBtnClick"
                android:outlineProvider="none"
                android:text="@string/signup_button"
                android:textColor="@color/white"
                android:textSize="20sp" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
