<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".dashboard.superadmin.FragmentProfile"
    android:layout_width="270dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:gravity="center"
    android:layout_marginTop="120dp"
    android:orientation="vertical">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <EditText
            android:id="@+id/edit_email_address_superadmin_profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:ems="10"
            android:fontFamily="@font/poppins_regular"
            android:hint="@string/email_address_text"
            android:inputType="textEmailAddress"
            android:textColor="@color/grey"
            android:textSize="16sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:passwordToggleEnabled="true">

        <EditText
            android:id="@+id/edit_old_password_superadmin_profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:ems="10"
            android:fontFamily="@font/poppins_regular"
            android:hint="@string/old_password_text"
            android:inputType="textPassword"
            android:textColor="@color/grey"
            android:textSize="16sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:passwordToggleEnabled="true">

        <EditText
            android:id="@+id/edit_new_password_superadmin_profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:ems="10"
            android:fontFamily="@font/poppins_regular"
            android:hint="@string/new_password_text"
            android:inputType="textPassword"
            android:textColor="@color/grey"
            android:textSize="16sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/update_superadmin_profile_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@drawable/rounded_corners_white"
        android:backgroundTint="@color/picton_blue"
        android:fontFamily="@font/poppins_medium"
        android:outlineProvider="none"
        android:text="@string/update_button"
        android:textColor="@color/white"
        android:textSize="20sp" />

</LinearLayout>