<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".authentication.ResetPasswordActivity"
    android:background="@color/white">

    <ImageView
        android:id="@+id/app_logo_login"
        android:layout_width="166dp"
        android:layout_height="78dp"
        android:layout_marginBottom="60dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/logov1_rounded" />

    <TextView
        android:id="@+id/reset_password_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="90dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/reset_password"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="290dp"
        android:layout_height="200dp"
        android:layout_marginTop="40dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reset_password_title">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_layout_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/editEmailAddressResetText"
                style="@style/Widget.AppCompat.EditText"
                android:layout_width="match_parent"
                android:layout_height="59dp"
                android:breakStrategy="simple"
                android:ems="10"
                android:fontFamily="@font/poppins_regular"
                android:hint="@string/email_address_text"
                android:inputType="textEmailAddress"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/grey"
                android:textSize="16sp"
                android:typeface="normal" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/reset_password_button_page"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="45dp"
            android:background="@drawable/rounded_corners_white"
            android:backgroundTint="@color/picton_blue"
            android:fontFamily="@font/poppins_medium"
            android:onClick="onResetPasswordBtnClick"
            android:outlineProvider="none"
            android:text="@string/reset_password_button"
            android:textColor="@color/white"
            android:textSize="20sp" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>